# sfml_project_test

./: .gitignore  CMakeLists.txt
src/: main.cpp
